# cpp-linux-learning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  StrFreq  main.cpp  primary
code/cmake_learn/: CMakeLists.txt  library.cpp  test1.cpp  week.md
code/cmake_learn/include/: test.h
code/json_parser/: CMakeLists.txt  main.cpp
code/json_parser/include/: error.h  json.h  parser.h  value.h
code/json_parser/json/: json.cpp  json.h
code/json_parser/src/: parser.cpp  value.cpp
code/json_parser/test/: CMakeLists.txt  test_basic.cpp  test_errors.cpp
code/oct25/: CMakeLists.txt  dynamic_arr.h  fib.cpp  fib_test.cpp  init_list.cpp  leak.cpp  play_function.cpp  task_scheduler.cpp  test.cpp  test_arr.cpp
code/sep25/: CMakeLists.txt  LRU.h  LRU_test.cpp  StrFreq.cpp  log_process.cpp  primary.cpp  rvalue.h
code/sep25/output/: primary
code/todo_list/: CMakeLists.txt  entity.cpp  entity.h  list_file.cpp  list_file.h  main.cpp  service.cpp  service.h  tasks.txt
note/: plan.md  task.md
note/sep25/: 1.md
note/todo_list/: design.md
