
add_executable(
        oct25
        test.cpp
)

add_executable(
        fib
        fib.cpp
)

add_executable(
        init
        init_list.cpp

)

add_executable(
        play
        play_function.cpp
)

add_executable(
        pointer
        leak.cpp
)

add_executable(
        task_scheduler
        task_scheduler.cpp

)
